# galois

./: CMakeLists.txt  README.md  ShannonCommon.cmake  env-config.cmake
galois/: CMakeLists.txt
galois/utilities/: CMakeLists.txt  core.hpp  friend_close_helper.cpp  friend_close_helper.h  high_resolution_timer.h  highlight.cpp  highlight.h  hp-threadpool.hpp  local_time_helper.cpp  local_time_helper.h  singleton.hpp  singleton_ptr.hpp  spinlockmutex.h  tests.cpp  trading_day.cpp  trading_day.h  trading_time_helper.cpp  trading_time_helper.h  trading_time_parser.cpp  trading_time_parser.h
snappy/: CMakeLists.txt
snappy_util/: CMakeLists.txt  snappy_exe.cpp  snappy_util.cpp  snappy_util.h
